--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/base": "^5.0.0-beta.60",
+    "@rollup/rollup-win32-x64-msvc": "^4.27.4",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
